# hexlet-django-blog

./: pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  models.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/templates/: 404.html  about.html  base.html  index.html  navigation.html
hexlet_django_blog/templates/articles/: create.html  form.html  index.html  show.html  update.html
