[project]
name = "hexlet-django-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "Egor Titov",email = "titov.egor1001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (==5.2.3)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "django-bootstrap4 (>=25.1,<26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
